# ROS2-2026-1

./: README.md
apex_ws/src/bringup/: CMakeLists.txt  package.xml
apex_ws/src/bringup/bringup/: demo_scenario_node.py
apex_ws/src/bringup/config/: apex.rviz  nav2_params.yaml  navigate_w_replanning.xml  slam_params.yaml
apex_ws/src/bringup/launch/: apex.launch.py  demo.launch.py
apex_ws/src/bringup/worlds/: apex_world.world
apex_ws/src/explorer/: CMakeLists.txt  package.xml
apex_ws/src/explorer/config/: explorer_params.yaml
apex_ws/src/explorer/explorer/: explorer_node.py
apex_ws/src/msgs/: CMakeLists.txt  package.xml
apex_ws/src/msgs/msg/: DetectedObject.msg  ExplorationStatus.msg
apex_ws/src/perception/: CMakeLists.txt  package.xml
apex_ws/src/perception/config/: yolo_params.yaml
apex_ws/src/perception/perception/: perception_node.py
apex_ws/src/planner/: CMakeLists.txt  package.xml
apex_ws/src/planner/config/: planner_params.yaml
apex_ws/src/planner/planner/: planner_node.py
apex_ws/src/semantic/: CMakeLists.txt  package.xml
apex_ws/src/semantic/semantic/: semantic_costmap_node.py
apex_ws/src/slam/: CMakeLists.txt  package.xml
apex_ws/src/slam/config/: slam_params.yaml
apex_ws/src/slam/slam/: slam_node.py
apex_ws/src/viz/: CMakeLists.txt  package.xml
apex_ws/src/viz/viz/: viz_node.py
