<?xml version="1.0"?>
<package format="3">
  <name>explorer</name>
  <version>0.1.0</version>
  <description>Explorer node for APEX: Frontier-based autonomous exploration</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
