<?xml version="1.0"?>
<package format="3">
  <name>semantic</name>
  <version>0.1.0</version>
  <description>Semantic Costmap node for APEX: injects detected object positions into Nav2 costmap</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
